# apps/server/src/api/routes/routes.ts
@@ -30,7 +30,7 @@ const models: TsoaRoute.Models = {
         "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"email":{"dataType":"string","required":true},"name":{"dataType":"string","required":true},"id":{"dataType":"string","required":true}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "APIPaginatedEntityResponse_UserDTO_": {
+    "APIPaginationResponse_UserDTO_": {
         "dataType": "refAlias",
         "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"next":{"dataType":"string"},"previous":{"dataType":"string"},"records":{"dataType":"array","array":{"dataType":"refAlias","ref":"UserDTO"},"required":true},"totalRecords":{"dataType":"double","required":true},"totalPages":{"dataType":"double","required":true},"limit":{"dataType":"double","required":true},"page":{"dataType":"double","required":true}},"validators":{}},
     },
@@ -123,9 +123,9 @@ export function RegisterRoutes(app: Router) {
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.get('/users',
             ...(fetchMiddlewares<RequestHandler>(UserController)),
-            ...(fetchMiddlewares<RequestHandler>(UserController.prototype.fetchUserListWithPagination)),
+            ...(fetchMiddlewares<RequestHandler>(UserController.prototype.fetchUsers)),
 
-            async function UserController_fetchUserListWithPagination(request: ExRequest, response: ExResponse, next: any) {
+            async function UserController_fetchUsers(request: ExRequest, response: ExResponse, next: any) {
             const args: Record<string, TsoaRoute.ParameterSchema> = {
                     req: {"in":"request","name":"req","required":true,"dataType":"object"},
                     page: {"in":"query","name":"page","dataType":"double"},
@@ -146,7 +146,7 @@ export function RegisterRoutes(app: Router) {
                 }
 
               await templateService.apiHandler({
-                methodName: 'fetchUserListWithPagination',
+                methodName: 'fetchUsers',
                 controller,
                 response,
                 next,
